--- a/index.html
+++ b/index.html
@@ -50,33 +50,8 @@
     <section id="blogs" class="section alt">
       <div class="container">
         <h2>Blogs</h2>
-        <div class="projects-grid">
-          <article class="card">
-            <h3>Project Name</h3>
-            <p class="muted">Short one-liner description of what the project does and why it's interesting.</p>
-            <div class="tags">
-              <span class="tag">HTML</span>
-              <span class="tag">CSS</span>
-              <span class="tag">JS</span>
-            </div>
-            <div class="card-actions">
-              <a class="btn small" href="#" target="_blank" rel="noopener">Live</a>
-              <a class="btn small" href="#" target="_blank" rel="noopener">Code</a>
-            </div>
-          </article>
-
-          <article class="card">
-            <h3>Another Project</h3>
-            <p class="muted">One-liner description. Replace with your own projects.</p>
-            <div class="tags">
-              <span class="tag">React</span>
-              <span class="tag">Node</span>
-            </div>
-            <div class="card-actions">
-              <a class="btn small" href="#" target="_blank" rel="noopener">Live</a>
-              <a class="btn small" href="#" target="_blank" rel="noopener">Code</a>
-            </div>
-          </article>
+        <div class="blogs-scroll">
+          <div class="blogs-track" id="blog-cards"></div>
         </div>
       </div>
     </section>
@@ -85,7 +60,7 @@
       <div class="container">
         <div class="section-header">
           <h2>Professional Experience</h2>
-          <a class="btn" href="assets/Ritu_Bansal_Resume.pdf" download>Download Resume (PDF)</a>
+          <a class="btn primary" href="assets/Ritu_Bansal_Resume.pdf" download>Download Resume (PDF)</a>
         </div>
 
         <div class="timeline">
@@ -294,5 +269,6 @@
   <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/ritu-bansalrb00/30min', text: 'Let\'s chat!', color: '#0069ff', textColor: '#ffffff', branding: true }); }</script>
   <!-- Calendly badge widget end -->
   <script src="js/main.js" defer></script>
+  <script src="js/blogs.js" defer></script>
 </body>
 </html>
