Handling case sensitivity in file paths

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="btn" href="#blogs">Read Blogs</a>
           </div>
         </div>
-        <div class="avatar"><img class="avatar-img" src="assets/headshot.jpg" alt="Photo of Ritu Bansal" loading="lazy" decoding="async"></div>
+        <div class="avatar"><img class="avatar-img" src="assets/headshot.JPG" alt="Photo of Ritu Bansal" loading="lazy" decoding="async"></div>
       </div>
     </section>
 
