--- a/index.html
+++ b/index.html
@@ -269,6 +269,6 @@
   <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/ritu-bansalrb00/30min', text: 'Let\'s chat!', color: '#0069ff', textColor: '#ffffff', branding: true }); }</script>
   <!-- Calendly badge widget end -->
   <script src="js/main.js" defer></script>
-  <script src="js/blogs.js?v=repo-btn-1" defer></script>
+  <script src="js/blogs.js?v=more-chip-1" defer></script>
 </body>
 </html>
