--- a/index.html
+++ b/index.html
@@ -65,13 +65,34 @@
 
         <div class="timeline">
           <article class="timeline-item">
-            <h3>Manager, Data Science — Scotiabank, Canadian Banking Analytics</h3>
-            <div class="meta">Toronto, Canada · Aug 2023 — Present</div>
+            <h3>Manager, Data Science & Lending Pricing — Scotiabank, Canadian Banking Analytics</h3>
+            <div class="meta">Toronto, Canada · Mar 2025 — Present</div>
             <ul>
-              <li>Built predictive ML models for financial products, improving targeted promotions precision (+15% growth), increasing balance retention (+20%), achieving 2× incremental lift in campaigns, and reducing operational costs (~$12M/year).</li>
-              <li>Designed profitability frameworks and KPIs to evaluate auto dealership performance across the bank’s network, enabling data-driven pricing and relationship strategies; drove +10% volume and +12% conversion.</li>
-              <li>Built a unified customer data asset summarizing ~$45B/month transactions across 12 systems with source attribution; developed segmentation to flag growing/stable/declining relationships for proactive retention and cross-team adoption.</li>
+              <li>Designed profitability frameworks and KPIs to evaluate auto dealership performance across the bank’s network, enabling data-driven pricing and relationship strategies. This led to a 10% increase in volume and a 12% improvement in conversion rates.</li>
+              <li>Developed a time-series mortgage volume predictor to forecast a 6-month horizon, integrating macroeconomic drivers to anticipate shifts in the mortgage book and guide portfolio strategy.</li>
+              <li>Built a unified customer data asset summarizing $45B/month in transactions across 12 systems, attributing activity to original sources. Developed a segmentation model to flag growing, stable, or declining client relationships thus driving proactive retention strategies and cross-team adoption.</li>
             </ul>
+            <div class="tags">
+              <span class="tag">ML</span>
+              <span class="tag">Segmentation Models</span>
+              <span class="tag">Time-series Forecasting</span>
+              <span class="tag">Python</span>
+              <span class="tag">SQL</span>
+              <span class="tag">GCP</span>
+              <span class="tag">Experimentation</span>
+              <span class="tag">Causal Inference</span>
+            </div>
+          </article>
+
+          <article class="timeline-item">
+            <h3>Manager, Data Science & Deposit Analytics — Scotiabank, Canadian Banking Analytics</h3>
+            <div class="meta">Toronto, Canada · Sep 2023 — Feb 2025</div>
+            <ul>
+              <li>Developed a foundational Price Sensitivity Model for a $60B deposit portfolio, generating $6M in incremental revenue through restructured pricing.</li>
+              <li>Implemented a Predictive Balance Churn Model, driving $4M in annualized improvement by optimizing balance retention.</li>
+              <li>Built a Growth Propensity Model for targeted promotions, delivering +15% balance growth, 2x incremental campaign lift, and $12M in annualized cost savings.</li>
+            </ul>
+
             <div class="tags">
               <span class="tag">ML</span>
               <span class="tag">NLP</span>
