--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="container grid-2">
         <div>
           <h1>Hi, I'm Ritu!</h1>
-          <p class="lead">I turn curiosity into code, and data into decisions.</p>
+          <p class="lead">I use Data Science and ML to deliver practical solutions</p>
           <p>I'm a Toronto-based Data Scientist and my favourite question to ask is "Why?". My work blends Machine Learning, NLP, Deep Learning, and Statistics to create models that drive real business impact. I’ve built solutions for everything from financial pricing to customer intelligence, always working end-to-end and in close collaboration with business teams.</p>
           <p>When I’m not exploring data, you’ll find me reading books, doing Pilates or Yoga, or hunting for vintage gems. I'm perpetually curious and always looking for a new challenge.</p>
           <div class="actions">
